--- a/index.html
+++ b/index.html
@@ -2,11 +2,256 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт - Главная</title>
   </head>
   <body>
+    <header class="main-header">
+      <section class="top-navigation">
+        <a href="#" class="logo">
+          <img src="img/logo.jpg" alt="логотип техномарта">
+        </a>
+        <span class="search">Поиск:</span>
+        <p class="bookmark">Закладки: 0</p>
+        <p class="cart">Корзина: 0</p>
+        <span class="checkout">Оформить заказ</span>
+      </section>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+      <section class="about-store">
+        <p class="tagline">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <div class="contacts">
+          <p class="telephone">+7 (812) 555-05-55</p>
+          <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д.</p>
+        </div>
+        <div class="user">
+          <ul class="navigation">
+            <li class="login">Войти</li>
+            <li class="signin">Регистрация</li>
+          </ul>
+        </div>
+      </section>
 
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="container">
+      <h1 class="visually-hidden">Интернет-магазин "Техномарт"</h1>
+
+      <section class="stock">
+        <h2 class="visually-hidden">Акции и предложения</h2>
+        <ul class="list">
+          <li class="item new">
+            <h3>Материалы</h3>
+            <a href="#">На любой вкус</a>
+          </li>
+          <li class="item">
+            <h3>Инструменты</h3>
+            <a href="#">На все случаи</a>
+          </li>
+          <li class="item">
+            <h3>Техника</h3>
+            <a href="#">Для стройки</a>
+          </li>
+          <li class="item">
+            <h3>Скидки 50%</h3>
+            <a href="#">На 350 товаров</a>
+          </li>
+          <li class="item">
+            <h3>Доставка</h3>
+            <a href="#">Бесплатно</a>
+          </li>
+        </ul>
+        <section class="slider">
+          <h2 class="visually-hidden">Инструменты</h2>
+          <ul class="arrows">
+            <li class="arrow-right"></li>
+            <li class="arrow-left"></li>
+          </ul>
+          <ul class="list">
+            <li class="item">
+              <figure>
+                <img src="img/slide1.jpg" alt="дрели">
+                <figcaption>
+                  <h3>Дрели</h3>
+                  <p>Соседям на радость</p>
+                </figcaption>
+              </figure>
+              <a href="#">Открыть каталог</a>
+            </li>
+            <li class="item">
+              <figure>
+                <img src="img/slide2.jpg" alt="перфораторы">
+                <figcaption>
+                  <h3>Перфораторы</h3>
+                  <p>Настоящие мужские игрушки</p>
+                </figcaption>
+              </figure>
+              <a href="#">Открыть каталог</a>
+            </li>
+          </ul>
+          <ul class="dots">
+            <li class="dot"></li>
+            <li class="dot active"></li>
+          </ul>
+        </section>
+      </section>
+
+      <section class="popular-products">
+        <h2>Популярные товары:</h2>
+        <a href="#">Все популярные товары</a>
+        <ul class="list">
+          <li class="item">
+            <img src="img/popular-product1.jpg" alt="Перфоратор BOSCH BFG 9000">
+            <h3>Перфоратор BOSCH BFG 9000</h3>
+            <del class="old-price">32500 Р.</del><br>
+            <span class="price">25500 Р.</span>
+          </li>
+          <li class="item">
+            <img src="img/popular-product2.jpg" alt="Перфоратор BOSCH BFG 3000">
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <del class="old-price">22500 Р.</del><br>
+            <span class="price">15500 Р.</span>
+          </li>
+          <li class="item">
+            <img src="img/popular-product3.jpg" alt="Перфоратор BOSCH BFG 6000">
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <del class="old-price">30500 Р.</del><br>
+            <span class="price">25500 Р.</span>
+          </li>
+          <li class="item new">
+            <img src="img/popular-product4.jpg" alt="Перфоратор BOSCH BFG 2000">
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <span class="price">12500 Р.</span>
+          </li>
+        </ul>
+      </section>
+
+      <section class="popular-manufacturers">
+        <h2>Популярные производители:</h2>
+        <a href="#">Все производители</a>
+        <ul class="list">
+          <li class="item">
+            <img src="img/popular-manufacturers1.jpg" alt="BOSCH">
+          </li>
+          <li class="item">
+            <img src="img/popular-manufacturers2.jpg" alt="makita">
+          </li>
+          <li class="item">
+            <img src="img/popular-manufacturers3.jpg" alt="dewalt">
+          </li>
+          <li class="item">
+            <img src="img/popular-manufacturers4.jpg" alt="интерком">
+          </li>
+          <li class="item">
+            <img src="img/popular-manufacturers5.jpg" alt="hitachi">
+          </li>
+          <li class="item">
+            <img src="img/popular-manufacturers6.jpg" alt="lg">
+          </li>
+          <li class="item">
+            <img src="img/popular-manufacturers7.jpg" alt="aeg">
+          </li>
+          <li class="item">
+            <img src="img/popular-manufacturers8.jpg" alt="metabo">
+          </li>
+        </ul>
+      </section>
+
+      <section class="services">
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
+        <p>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <dl class="list">
+          <dt class="name">Доставка</dt>
+          <dd class="item">
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          </dd>
+          <dt class="name">Гарантия</dt>
+          <dd class="item">
+            <h3>Гарантия</h3>
+            <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+          </dd>
+          <dt class="name">Кредит</dt>
+          <dd class="item">
+            <h3>Кредит</h3>
+            <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
+            <span>Отправить заявку</span>
+          </dd>
+        </dl>
+      </section>
+
+      <section class="about">
+        <h2>Компания "Техномарт"</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#">Подробнее о компании</a>
+      </section>
+
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <img src="img/map.jpg" alt="карта">
+        <a href="#">Заблудились? Напишите нам!</a>
+      </section>
+    </main>
+
+    <footer class="main-footer">
+      <section class="contacts">
+        <a href="#" class="logo">
+          <img src="img/footer-logo.jpg" alt="техномарт">
+        </a>
+        <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="telephone">+7 (812) 555-05-55</p>
+      </section>
+      <section class="sitemap">
+        <ul class="site-navigation">
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul class="categories-navigation">
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </section>
+      <section class="bottom">
+        <p class="copyright">© 2010–2017 Компания «Техномарт»<br>Все права защищены</p>
+        <ul class="social-buttons">
+          <li><a href="#">VK</a></li>
+          <li><a href="#">FB</a></li>
+          <li><a href="#">Insta</a></li>
+        </ul>
+        <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
+        <p class="author">Разработанно -<br><a href="#">htmlacademy.ru</a></p>
+      </section>
+    </footer>
+
+    <section class="modal modal-map">
+      <span class="close-button">+</span>
+      <figure class="map"></figure>
+    </section>
+
+    <section class="callback-form">
+      <span class="close-button">+</span>
+    </section>
   </body>
 </html>
