--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <body>
     <header class="main-header">
       <section class="top-navigation">
-        <a href="#" class="logo">
-          <img src="img/logo.jpg" alt="логотип техномарта">
+        <a href="#" class="logo-link">
+          <div class="logo">
+            <span class="logo-text">Техномарт</span>
+          </div>
         </a>
         <span class="search">Поиск:</span>
         <p class="bookmark">Закладки: 0</p>
@@ -79,7 +81,7 @@
           <ul class="list">
             <li class="item">
               <figure>
-                <img src="img/slide1.jpg" alt="дрели">
+                <img src="img/slide_1.jpg" alt="дрели">
                 <figcaption>
                   <h3>Дрели</h3>
                   <p>Соседям на радость</p>
@@ -89,7 +91,7 @@
             </li>
             <li class="item">
               <figure>
-                <img src="img/slide2.jpg" alt="перфораторы">
+                <img src="img/slide_2.jpg" alt="перфораторы">
                 <figcaption>
                   <h3>Перфораторы</h3>
                   <p>Настоящие мужские игрушки</p>
@@ -110,25 +112,25 @@
         <a href="#">Все популярные товары</a>
         <ul class="list">
           <li class="item">
-            <img src="img/popular-product1.jpg" alt="Перфоратор BOSCH BFG 9000">
+            <img src="img/product_1.jpg" alt="Перфоратор BOSCH BFG 9000">
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <del class="old-price">32500 Р.</del><br>
             <span class="price">25500 Р.</span>
           </li>
           <li class="item">
-            <img src="img/popular-product2.jpg" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <del class="old-price">22500 Р.</del><br>
             <span class="price">15500 Р.</span>
           </li>
           <li class="item">
-            <img src="img/popular-product3.jpg" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <del class="old-price">30500 Р.</del><br>
             <span class="price">25500 Р.</span>
           </li>
           <li class="item new">
-            <img src="img/popular-product4.jpg" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="price">12500 Р.</span>
           </li>
@@ -140,28 +142,28 @@
         <a href="#">Все производители</a>
         <ul class="list">
           <li class="item">
-            <img src="img/popular-manufacturers1.jpg" alt="BOSCH">
+            <img src="img/bosch.jpg" alt="BOSCH">
           </li>
           <li class="item">
-            <img src="img/popular-manufacturers2.jpg" alt="makita">
+            <img src="img/makita.jpg" alt="makita">
           </li>
           <li class="item">
-            <img src="img/popular-manufacturers3.jpg" alt="dewalt">
+            <img src="img/dewalt.jpg" alt="dewalt">
           </li>
           <li class="item">
-            <img src="img/popular-manufacturers4.jpg" alt="интерком">
+            <img src="img/interskop.jpg" alt="интерком">
           </li>
           <li class="item">
-            <img src="img/popular-manufacturers5.jpg" alt="hitachi">
+            <img src="img/hitachi.jpg" alt="hitachi">
           </li>
           <li class="item">
-            <img src="img/popular-manufacturers6.jpg" alt="lg">
+            <img src="img/lg.jpg" alt="lg">
           </li>
           <li class="item">
-            <img src="img/popular-manufacturers7.jpg" alt="aeg">
+            <img src="img/aeg.jpg" alt="aeg">
           </li>
           <li class="item">
-            <img src="img/popular-manufacturers8.jpg" alt="metabo">
+            <img src="img/metabo.jpg" alt="metabo">
           </li>
         </ul>
       </section>
@@ -205,15 +207,17 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <img src="img/map.jpg" alt="карта">
+        <img src="img/mini_map.jpg" alt="карта">
         <a href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
 
     <footer class="main-footer">
       <section class="contacts">
-        <a href="#" class="logo">
-          <img src="img/footer-logo.jpg" alt="техномарт">
+        <a href="#" class="logo-link">
+          <div class="logo">
+            <span class="logo-text">Техномарт</span>
+          </div>
         </a>
         <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="telephone">+7 (812) 555-05-55</p>
@@ -247,7 +251,7 @@
 
     <section class="modal modal-map">
       <span class="close-button">+</span>
-      <figure class="map"></figure>
+      <img src="img/map.jpg" alt="Карта проезда">
     </section>
 
     <section class="callback-form">
