--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,10 @@
 <body>
   <header class="main-header">
     <section class="top-navigation">
-      <a href="#" class="logo">
-        <img src="img/logo.jpg" alt="логотип техномарта">
+      <a href="#" class="logo-link">
+        <div class="logo">
+          <span class="logo-text">Техномарт</span>
+        </div>
       </a>
       <span class="search">Поиск:</span>
       <p class="bookmark">Закладки: 0</p>
@@ -109,7 +111,7 @@
       <section class="product-list">
         <ul class="list">
           <li class="item">
-            <img src="img/popular-product2.jpg" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -119,7 +121,7 @@
             <span class="price">15500 Р.</span>
           </li>
           <li class="item">
-            <img src="img/popular-product3.jpg" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -129,7 +131,7 @@
             <span class="price">25500 Р.</span>
           </li>
           <li class="item new">
-            <img src="img/popular-product4.jpg" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -139,7 +141,7 @@
           </li>
 
           <li class="item">
-            <img src="img/popular-product2.jpg" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -149,7 +151,7 @@
             <span class="price">15500 Р.</span>
           </li>
           <li class="item new">
-            <img src="img/popular-product3.jpg" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -159,7 +161,7 @@
             <span class="price">25500 Р.</span>
           </li>
           <li class="item">
-            <img src="img/popular-product4.jpg" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -169,7 +171,7 @@
           </li>
 
           <li class="item new">
-            <img src="img/popular-product2.jpg" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -179,7 +181,7 @@
             <span class="price">15500 Р.</span>
           </li>
           <li class="item">
-            <img src="img/popular-product3.jpg" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -189,7 +191,7 @@
             <span class="price">25500 Р.</span>
           </li>
           <li class="item">
-            <img src="img/popular-product4.jpg" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
             <div class="buttons visually-hidden">
               <span>Купить</span><br>
               <span>В закладки</span>
@@ -215,42 +217,53 @@
       <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
       <p>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </section>
-
-    <footer class="main-footer">
-      <section class="contacts">
-        <a href="#" class="logo">
-          <img src="img/footer-logo.jpg" alt="техномарт">
-        </a>
-        <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p class="telephone">+7 (812) 555-05-55</p>
-      </section>
-      <section class="sitemap">
-        <ul class="site-navigation">
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <ul class="categories-navigation">
-          <li><a href="#">Материалы</a></li>
-          <li><a href="#">Техника</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-        </ul>
-      </section>
-      <section class="bottom">
-        <p class="copyright">© 2010–2017 Компания «Техномарт»<br>Все права защищены</p>
-        <ul class="social-buttons">
-          <li><a href="#">VK</a></li>
-          <li><a href="#">FB</a></li>
-          <li><a href="#">Insta</a></li>
-        </ul>
-        <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
-        <p class="author">Разработанно -<br><a href="#">htmlacademy.ru</a></p>
-      </section>
-    </footer>
   </main>
+
+  <footer class="main-footer">
+    <section class="contacts">
+      <a href="#" class="logo-link">
+        <div class="logo">
+          <span class="logo-text">Техномарт</span>
+        </div>
+      </a>
+      <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <p class="telephone">+7 (812) 555-05-55</p>
+    </section>
+    <section class="sitemap">
+      <ul class="site-navigation">
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul class="categories-navigation">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </section>
+    <section class="bottom">
+      <p class="copyright">© 2010–2017 Компания «Техномарт»<br>Все права защищены</p>
+      <ul class="social-buttons">
+        <li><a href="#">VK</a></li>
+        <li><a href="#">FB</a></li>
+        <li><a href="#">Insta</a></li>
+      </ul>
+      <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
+      <p class="author">Разработанно -<br><a href="#">htmlacademy.ru</a></p>
+    </section>
+  </footer>
+
+  <section class="modal modal-cart">
+    <h2>Товар добавлен в корзину</h2>
+    <span class="close-button">+</span>
+    <footer class="modal-footer">
+      <span>Оформить заказ</span>
+      <span>Продолжить покупки</span>
+    </footer>
+  </section>
 
 </body>
 </html>
