--- a/index.html
+++ b/index.html
@@ -7,36 +7,37 @@
   <body>
     <header class="main-header">
       <section class="top-navigation">
-        <a href="#" class="logo-link">
-          <div class="logo">
-            <span class="logo-text">Техномарт</span>
-          </div>
-        </a>
-        <span class="search">Поиск:</span>
-        <p class="bookmark">Закладки: 0</p>
-        <p class="cart">Корзина: 0</p>
-        <span class="checkout">Оформить заказ</span>
+        <a href="#" class="logo">Техномарт</a>
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+          <label class="visually-hidden" for="search-field">Поиск</label>
+          <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
+        </form>
+        <ul>
+          <li><a href="#" class="bookmark">Закладки: 0</a></li>
+          <li><a href="#" class="cart">Корзина: 0</a></li>
+          <li><a href="#" class="checkout">Оформить заказ</a></li>
+        </ul>
       </section>
 
       <section class="about-store">
         <p class="tagline">Интернет-магазин строительных материалов и инструментов для ремонта</p>
         <div class="contacts">
           <p class="telephone">+7 (812) 555-05-55</p>
-          <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д.</p>
+          <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="user">
           <ul class="navigation">
-            <li class="login">Войти</li>
-            <li class="signin">Регистрация</li>
+            <li class="login"><a href="#" class="link">Войти</a></li>
+            <li class="signin"><a href="#" class="link">Регистрация</a></li>
           </ul>
         </div>
       </section>
 
       <nav class="main-navigation">
         <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -75,69 +76,81 @@
         <section class="slider">
           <h2 class="visually-hidden">Инструменты</h2>
           <ul class="arrows">
-            <li class="arrow-right"></li>
-            <li class="arrow-left"></li>
+            <li class="arrow-right"><button>Следующий слайд</button></li>
+            <li class="arrow-left"><button>Предыдущий слайд</button></li>
           </ul>
           <ul class="list">
             <li class="item">
-              <figure>
-                <img src="img/slide_1.jpg" alt="дрели">
-                <figcaption>
-                  <h3>Дрели</h3>
-                  <p>Соседям на радость</p>
-                </figcaption>
-              </figure>
+              <img src="img/slide_1.jpg" alt="Мужчина с дрелью">
+              <div class="caption">
+                <h3>Дрели</h3>
+                <p>Соседям на радость</p>
+              </div>
               <a href="#">Открыть каталог</a>
             </li>
             <li class="item">
-              <figure>
-                <img src="img/slide_2.jpg" alt="перфораторы">
-                <figcaption>
-                  <h3>Перфораторы</h3>
-                  <p>Настоящие мужские игрушки</p>
-                </figcaption>
-              </figure>
+              <img src="img/slide_2.jpg" alt="Мужчина с перфоратором">
+              <div class="caption">
+                <h3>Перфораторы</h3>
+                <p>Настоящие мужские игрушки</p>
+              </div>
               <a href="#">Открыть каталог</a>
             </li>
           </ul>
           <ul class="dots">
-            <li class="dot"></li>
-            <li class="dot active"></li>
+            <li class="dot"><button>1 слайд</button></li>
+            <li class="dot active"><button>2 слайд</button></li>
           </ul>
         </section>
       </section>
 
-      <section class="popular-products">
+      <section class="popular-section products">
         <h2>Популярные товары:</h2>
         <a href="#">Все популярные товары</a>
         <ul class="list">
           <li class="item">
             <img src="img/product_1.jpg" alt="Перфоратор BOSCH BFG 9000">
             <h3>Перфоратор BOSCH BFG 9000</h3>
-            <del class="old-price">32500 Р.</del><br>
-            <span class="price">25500 Р.</span>
+            <p class="old-price">32500 Р.</p>
+            <p class="price">25500 Р.</p>
+            <div class="buttons hidden">
+              <p><button>Купить</button></p>
+              <p><button>В закладки</button></p>
+            </div>
           </li>
           <li class="item">
             <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
-            <del class="old-price">22500 Р.</del><br>
-            <span class="price">15500 Р.</span>
+            <p class="old-price">22500 Р.</p>
+            <p class="price">15500 Р.</p>
+            <div class="buttons hidden">
+              <p><button>Купить</button></p>
+              <p><button>В закладки</button></p>
+            </div>
           </li>
           <li class="item">
             <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
-            <del class="old-price">30500 Р.</del><br>
-            <span class="price">25500 Р.</span>
+            <p class="old-price">30500 Р.</p>
+            <p class="price">25500 Р.</p>
+            <div class="buttons hidden">
+              <p><button>Купить</button></p>
+              <p><button>В закладки</button></p>
+            </div>
           </li>
           <li class="item new">
             <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
-            <span class="price">12500 Р.</span>
+            <p class="price">12500 Р.</p>
+            <div class="buttons hidden">
+              <p><button>Купить</button></p>
+              <p><button>В закладки</button></p>
+            </div>
           </li>
         </ul>
       </section>
 
-      <section class="popular-manufacturers">
+      <section class="popular-section manufacturers">
         <h2>Популярные производители:</h2>
         <a href="#">Все производители</a>
         <ul class="list">
@@ -145,51 +158,52 @@
             <img src="img/bosch.jpg" alt="BOSCH">
           </li>
           <li class="item">
-            <img src="img/makita.jpg" alt="makita">
+            <img src="img/Makita.jpg" alt="makita">
           </li>
           <li class="item">
-            <img src="img/dewalt.jpg" alt="dewalt">
+            <img src="img/DeWALT.jpg" alt="dewalt">
           </li>
           <li class="item">
-            <img src="img/interskop.jpg" alt="интерком">
+            <img src="img/Interskop.jpg" alt="интерком">
           </li>
           <li class="item">
-            <img src="img/hitachi.jpg" alt="hitachi">
+            <img src="img/Hitachi.jpg" alt="hitachi">
           </li>
           <li class="item">
-            <img src="img/lg.jpg" alt="lg">
+            <img src="img/LG.jpg" alt="lg">
           </li>
           <li class="item">
-            <img src="img/aeg.jpg" alt="aeg">
+            <img src="img/AEG.jpg" alt="aeg">
           </li>
           <li class="item">
-            <img src="img/metabo.jpg" alt="metabo">
+            <img src="img/Metabo.jpg" alt="metabo">
           </li>
         </ul>
       </section>
 
-      <section class="services">
+      <section class="description-section services">
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
         <p>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <dl class="list">
-          <dt class="name">Доставка</dt>
-          <dd class="item">
+        <ul class="tabs">
+          <li class="tab"><a href="#">Доставка</a></li>
+          <li class="tab"><a href="#">Гарантия</a></li>
+          <li class="tab"><a href="#">Кредит</a></li>
+        </ul>
+        <ul class="tabs-content">
+          <li class="tab-content">
             <h3>Доставка</h3>
             <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-          </dd>
-          <dt class="name">Гарантия</dt>
-          <dd class="item">
+          </li>
+          <li class="tab-content">
             <h3>Гарантия</h3>
             <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
-          </dd>
-          <dt class="name">Кредит</dt>
-          <dd class="item">
+          </li>
+          <li class="tab-content">
             <h3>Кредит</h3>
             <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
-            <span>Отправить заявку</span>
-          </dd>
-        </dl>
+          </li>
+        </ul>
       </section>
 
       <section class="about">
@@ -207,18 +221,14 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <img src="img/mini_map.jpg" alt="карта">
+        <img src="img/mini_map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <a href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
 
     <footer class="main-footer">
       <section class="contacts">
-        <a href="#" class="logo-link">
-          <div class="logo">
-            <span class="logo-text">Техномарт</span>
-          </div>
-        </a>
+        <a href="#" class="logo">Техномарт</a>
         <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <p class="telephone">+7 (812) 555-05-55</p>
       </section>
@@ -240,9 +250,15 @@
       <section class="bottom">
         <p class="copyright">© 2010–2017 Компания «Техномарт»<br>Все права защищены</p>
         <ul class="social-buttons">
-          <li><a href="#">VK</a></li>
-          <li><a href="#">FB</a></li>
-          <li><a href="#">Insta</a></li>
+          <li>
+            <span class="visually-hidden"><a href="#">Vkontakte</a></span>
+          </li>
+          <li>
+            <span class="visually-hidden"><a href="#">Facebook</a></span>
+          </li>
+          <li>
+            <span class="visually-hidden"><a href="#">Instagram</a></span>
+          </li>
         </ul>
         <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
         <p class="author">Разработанно -<br><a href="#">htmlacademy.ru</a></p>
@@ -250,12 +266,30 @@
     </footer>
 
     <section class="modal modal-map">
-      <span class="close-button">+</span>
-      <img src="img/map.jpg" alt="Карта проезда">
+      <button class="modal-close" type="button">Закрыть</button>
+      <img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
     </section>
 
-    <section class="callback-form">
-      <span class="close-button">+</span>
+    <section class="modal modal-callback">
+      <button class="modal-close" type="button">Закрыть</button>
+      <form class="callback-form" action="https://echo.htmlacademy.ru" method="post">
+        <p>
+          <label for="name-callback">Ваше имя:</label>
+          <input id="name-callback" type="text" name="name" placeholder="Представьтесь, пожайлуста">
+        </p>
+        <p>
+          <label for="email-callback">Ваше e-mail:</label>
+          <input id="email-callback" type="email" name="email" placeholder="Для отправки ответа">
+        </p>
+        <p>
+          <label for="message-callback">Текст письма:</label>
+          <textarea id="message-callback" name="message" placeholder="В свободной форме">
+          </textarea>
+        </p>
+        <p>
+          <button type="submit">Отправить</button>
+        </p>
+      </form>
     </section>
   </body>
 </html>
