--- a/catalog.html
+++ b/catalog.html
@@ -138,11 +138,11 @@
       <section class="sorting">
         <h2>Сортировка:</h2>
         <ul>
-          <li><button>По цене</button></li>
-          <li><button>По типу</button></li>
-          <li><button>По функциональности</button></li>
-          <li><button><span class="visually-hidden">По возрастанию</span></button></li>
-          <li><button><span class="visually-hidden">По убыванию</span></button></li>
+          <li><a href="#">По цене</a></li>
+          <li><a href="#">По типу</a></li>
+          <li><a href="#">По функциональности</a></li>
+          <li><a href="#"><span class="visually-hidden">По возрастанию</span></a></li>
+          <li><a href="#"><span class="visually-hidden">По убыванию</span></a></li>
         </ul>
       </section>
 
@@ -260,8 +260,7 @@
   <footer class="main-footer">
     <section class="contacts">
       <a href="#" class="logo">Техномарт</a>
-      <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      <p class="telephone">+7 (812) 555-05-55</p>
+      <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> +7 (812) 555-05-55</p>
     </section>
     <section class="sitemap">
       <ul class="site-navigation">
