--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
     <footer class="main-footer">
       <section class="contacts">
         <a href="#" class="logo">Техномарт</a>
-        <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p class="telephone">+7 (812) 555-05-55</p>
+        <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> +7 (812) 555-05-55</p>
       </section>
       <section class="sitemap">
         <ul class="site-navigation">
