--- a/catalog.html
+++ b/catalog.html
@@ -52,8 +52,8 @@
       <ul class="list">
         <li class="item"><a href="#">Главная</a></li>
         <li class="item"><a href="#">Каталог</a></li>
-        <li class="item"><a href="#">Интсрумент</a></li>
-        <li class="item">Перфораторы</li>
+        <li class="item"><a href="#">Инструмент</a></li>
+        <li class="item"><a>Перфораторы</a></li>
       </ul>
     </section>
 
