--- a/catalog.html
+++ b/catalog.html
@@ -63,11 +63,11 @@
         <h2>Фильтр:</h2>
         <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
           <ul>
-            <li class="rage">
+            <li class="range">
               <h3>Цена:</h3>
               <p>
-                <label for="rage-filter" class="visually-hidden">Диапазон цены:</label>
-                <input id="rage-filter" type="range" min="1" max="50000" step="100" value="30000">
+                <label for="range-filter" class="visually-hidden">Диапазон цены:</label>
+                <input id="range-filter" type="range" min="1" max="50000" step="100" value="30000">
               </p>
               <span class="min" aria-label="Минимальное значение цены">0</span> -
               <span class="max" aria-label="Максимальное значение цены">30000</span>
@@ -154,8 +154,8 @@
             <p class="old-price">22500 Р.</p>
             <p class="price">15500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -164,8 +164,8 @@
             <p class="old-price">30500 Р.</p>
             <p class="price">25500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item new">
@@ -173,8 +173,8 @@
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
             <div class="buttons">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
 
@@ -184,8 +184,8 @@
             <p class="old-price">22500 Р.</p>
             <p class="price">15500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item new">
@@ -194,8 +194,8 @@
             <p class="old-price">30500 Р.</p>
             <p class="price">25500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -203,8 +203,8 @@
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
 
@@ -214,8 +214,8 @@
             <p class="old-price">22500 Р.</p>
             <p class="price">15500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -224,8 +224,8 @@
             <p class="old-price">30500 Р.</p>
             <p class="price">25500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -233,8 +233,8 @@
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
         </ul>
@@ -260,7 +260,7 @@
   <footer class="main-footer">
     <section class="contacts">
       <a href="#" class="logo">Техномарт</a>
-      <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> +7 (812) 555-05-55</p>
+      <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
     </section>
     <section class="sitemap">
       <ul class="site-navigation">
@@ -278,7 +278,7 @@
       </ul>
     </section>
     <section class="bottom">
-      <p class="copyright">© 2010–2017 Компания «Техномарт»<br>Все права защищены</p>
+      <p class="copyright">© 2010–2017 Компания «Техномарт» Все права защищены</p>
       <ul class="social-buttons">
         <li>
           <span class="visually-hidden"><a href="#">Vkontakte</a></span>
@@ -296,7 +296,7 @@
   </footer>
 
   <section class="modal modal-cart">
-    <button class="modal-close" type="button">Закрыть</button>
+    <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
     <h2>Товар добавлен в корзину</h2>
     <footer class="modal-footer">
       <a href="#">Оформить заказ</a>
