--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </ul>
           <ul class="list">
             <li class="item">
-              <img src="img/slide_1.jpg" alt="Мужчина с дрелью">
+              <img src="img/slide_1.jpg" alt="Дрели">
               <div class="caption">
                 <h3>Дрели</h3>
                 <p>Соседям на радость</p>
@@ -89,7 +89,7 @@
               <a href="#">Открыть каталог</a>
             </li>
             <li class="item">
-              <img src="img/slide_2.jpg" alt="Мужчина с перфоратором">
+              <img src="img/slide_2.jpg" alt="Перфораторы">
               <div class="caption">
                 <h3>Перфораторы</h3>
                 <p>Настоящие мужские игрушки</p>
@@ -114,8 +114,8 @@
             <p class="old-price">32500 Р.</p>
             <p class="price">25500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -124,8 +124,8 @@
             <p class="old-price">22500 Р.</p>
             <p class="price">15500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -134,8 +134,8 @@
             <p class="old-price">30500 Р.</p>
             <p class="price">25500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
           <li class="item new">
@@ -143,8 +143,8 @@
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
             <div class="buttons hidden">
-              <p><button>Купить</button></p>
-              <p><button>В закладки</button></p>
+              <button>Купить</button>
+              <button>В закладки</button>
             </div>
           </li>
         </ul>
@@ -155,28 +155,28 @@
         <a href="#">Все производители</a>
         <ul class="list">
           <li class="item">
-            <img src="img/bosch.jpg" alt="BOSCH">
+            <a href="#"><img src="img/bosch.jpg" alt="BOSCH"></a>
           </li>
           <li class="item">
-            <img src="img/Makita.jpg" alt="makita">
+            <a href="#"><img src="img/Makita.jpg" alt="Makita"></a>
           </li>
           <li class="item">
-            <img src="img/DeWALT.jpg" alt="dewalt">
+            <a href="#"><img src="img/DeWALT.jpg" alt="DeWALT"></a>
           </li>
           <li class="item">
-            <img src="img/Interskop.jpg" alt="интерком">
+            <a href="#"><img src="img/Interskol.jpg" alt="Интерскол"></a>
           </li>
           <li class="item">
-            <img src="img/Hitachi.jpg" alt="hitachi">
+            <a href="#"><img src="img/Hitachi.jpg" alt="Hitachi"></a>
           </li>
           <li class="item">
-            <img src="img/LG.jpg" alt="lg">
+            <a href="#"><img src="img/LG.jpg" alt="LG"></a>
           </li>
           <li class="item">
-            <img src="img/AEG.jpg" alt="aeg">
+            <a href="#"><img src="img/AEG.jpg" alt="AEG"></a>
           </li>
           <li class="item">
-            <img src="img/Metabo.jpg" alt="metabo">
+            <a href="#"><img src="img/Metabo.jpg" alt="Metabo"></a>
           </li>
         </ul>
       </section>
@@ -229,7 +229,7 @@
     <footer class="main-footer">
       <section class="contacts">
         <a href="#" class="logo">Техномарт</a>
-        <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> +7 (812) 555-05-55</p>
+        <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
       </section>
       <section class="sitemap">
         <ul class="site-navigation">
@@ -247,7 +247,7 @@
         </ul>
       </section>
       <section class="bottom">
-        <p class="copyright">© 2010–2017 Компания «Техномарт»<br>Все права защищены</p>
+        <p class="copyright">© 2010–2017 Компания «Техномарт» Все права защищены</p>
         <ul class="social-buttons">
           <li>
             <span class="visually-hidden"><a href="#">Vkontakte</a></span>
@@ -265,12 +265,12 @@
     </footer>
 
     <section class="modal modal-map">
-      <button class="modal-close" type="button">Закрыть</button>
+      <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
       <img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
     </section>
 
     <section class="modal modal-callback">
-      <button class="modal-close" type="button">Закрыть</button>
+      <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
       <form class="callback-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
           <label for="name-callback">Ваше имя:</label>
