--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт - Главная</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
@@ -12,7 +16,7 @@
           <label class="visually-hidden" for="search-field">Поиск</label>
           <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
         </form>
-        <ul>
+        <ul class="menu">
           <li><a href="#" class="bookmark">Закладки: 0</a></li>
           <li><a href="#" class="cart">Корзина: 0</a></li>
           <li><a href="#" class="checkout">Оформить заказ</a></li>
